# recoco-plugins-mi-depafi

./: .gitignore  README.md  package.json  pyproject.toml
plugin_mi_depafi/: admin.py  apps.py  conftest.py  digests.py  forms.py  models.py  plugin.py  rest_api.py  rest_urls.py  serializers.py  signals.py  test_import_lakaa.py  tests.py  urls.py  verbs.py  views.py
plugin_mi_depafi/css/: realisation-form.scss  realisation-list.scss
plugin_mi_depafi/css/fragments/: realisation-modal.scss
plugin_mi_depafi/js/: RealisationInviteOnTaskDone.js  RealisationListCrm.js  realisationListCrm.js  realisationsMap.js
plugin_mi_depafi/js/apps/: realisationForm.js  realisationListCrm.js
plugin_mi_depafi/js/components/: RealisationDetailView.js  RealisationDocumentList.js  RealisationListCrm.js  RealisationPhotoGallery.js  RealisationResourceSelect.js  realisationsMap.js
plugin_mi_depafi/js/styles/: realisation-form.css.js  realisation-list.css.js
plugin_mi_depafi/management/commands/: import_lakaa.py
plugin_mi_depafi/migrations/: 0001_initial.py  0002_realisationlike.py  0003_realisationnode.py  0004_alter_realisationnode_options.py  0005_realisation_created_by.py  0005_realisation_site.py  0006_realisation_date.py  0006_realisation_site.py  0007_realisation_date.py  0007_realisation_key_figures.py  0008_realisation_key_figures.py  0008_realisationdocument.py  0009_realisation_created_by.py  0009_realisationdocument.py
plugin_mi_depafi/templates/plugin_mi_depafi/: crm_realisation_list.html  realisation_create.html  realisation_create_update.html  realisation_detail.html  (+3 more)
(+9 files in other folders)
